<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jmv.frre.moduloestudiante.activities.sysacad.LoginActivity" >

    <!-- Login progress -->
<LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/internal_bg"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/login_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:padding="6dip" >

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/loading_status_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:shadowColor="#FF0000"
                    android:shadowRadius="25"
                    android:text="@string/login_progress_signing_in"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/internal_bg" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:paddingBottom="6dip"
                android:shadowColor="#000000"
                android:shadowRadius="12"
                android:text="@string/login_main_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login" />

            <TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="left"
                android:paddingBottom="6dip"
                android:text="@string/login_usr_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusLeft="@id/email"
                android:nextFocusUp="@id/email"
                android:singleLine="true"
                android:textColor="#000bff"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="left"
                android:paddingBottom="6dip"
                android:text="@string/login_password_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#000bff"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/session_status_icon_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:background="@drawable/home"
                    android:shadowColor="#FFFFFF"
                    android:shadowRadius="20"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:text="@string/go_home"
                    android:onClick="goHome"
                    android:shadowColor="#000000"
                    android:shadowRadius="20"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF" />
                
                <Button
                    android:id="@+id/session_status_icon_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ok_led"
                    android:shadowColor="#FFFFFF"
                    android:shadowRadius="20"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:text="@string/action_sign_in_register"
                    android:shadowColor="#000000"
                    android:shadowRadius="20"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>